# pre-commit-mcp

./: README.md  TODO.features.md  pyproject.toml  run_tests.py  run_tests_verbose.py  test_config.json
pre_commit_mcp/: __init__.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_server.py  test_tools.py
